--- a/appPropinas/app/src/main/res/layout/activity_main.xml
+++ b/appPropinas/app/src/main/res/layout/activity_main.xml
@@ -5,40 +5,48 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:padding="15dp"
-    >
+    tools:context=".MainActivity">
 
     <EditText
         android:id="@+id/edtPrecio"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="31dp"
+        android:layout_marginBottom="23dp"
         android:ems="10"
         android:hint="Precio del servicio"
         android:inputType="number"
         android:text="Precio del servicio"
         app:layout_constraintBaseline_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.077"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="31dp"
+        android:layout_marginBottom="43dp"
         android:text="¿Cómo ha sido el servicio?"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="84dp" />
+        app:layout_constraintBottom_toTopOf="@+id/rG1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtPrecio"
+        tools:ignore="MissingConstraints" />
 
     <RadioGroup
         android:id="@+id/rG1"
-        android:layout_width="185dp"
-        android:layout_height="170dp"
-        tools:ignore="InvalidId,MissingConstraints"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="146dp">
+        android:layout_width="182dp"
+        android:layout_height="183dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/sRedondeo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:ignore="InvalidId,MissingConstraints">
 
         <RadioButton
             android:id="@+id/rB20"
@@ -63,27 +71,37 @@
         android:id="@+id/sRedondeo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
         android:text="Propina ¿Sí o No?"
-        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="331dp" />
+        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
+        app:layout_constraintStart_toStartOf="@+id/rG1"
+        app:layout_constraintTop_toBottomOf="@+id/rG1"
+        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />
 
     <Button
         android:id="@+id/btnCalcular"
-        android:layout_width="300dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="54dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="26dp"
         android:text="Button"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="39dp"
-        tools:layout_editor_absoluteY="373dp" />
+        app:layout_constraintBottom_toTopOf="@+id/txtTotal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sRedondeo"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/txtTotal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginBottom="250dp"
         android:text="TextView"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="29dp"
-        tools:layout_editor_absoluteY="447dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
